syntax = "proto3";
package abag.quasarnode.qbank;

option go_package = "github.com/abag/quasarnode/x/qbank/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

// FeeData defines the data object for the fee collection fields.
message FeeData {
  string feeCollector = 1; 
  string fromAddress = 2;
  cosmos.base.v1beta1.Coin fee = 3 [(gogoproto.nullable) = false]; 
  uint64 feeType = 4; 
  uint64 blockHeight = 5; 
  string memo = 6; 
}
